CCS7_Workspace/.metadata/.plugins/org.eclipse.cdt.ui/Semesterproject.build.log

**** Build of configuration Debug for project Semesterproject ****

/opt/ti/ccsv7/utils/bin/gmake -k -j 8 all -O 
Building file: ../main.c
Invoking: GNU Compiler
"/opt/ti/ccsv7/tools/compiler/gcc-arm-none-eabi-4_9-2015q3/bin/arm-none-eabi-gcc" -c -mcpu=cortex-m4 -march=armv7e-m -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -DPART_TM4C123GH6PM -I"/home/vision/Dropbox/SDU/4_Semester_2017/EMP/CCS7_Workspace/Semesterproject" -I"/opt/ti/ccsv7/tools/compiler/gcc-arm-none-eabi-4_9-2015q3/arm-none-eabi/include" -ffunction-sections -fdata-sections -g -gdwarf-3 -gstrict-dwarf -Wall -specs="nosys.specs" -MD -std=c99 -c -MMD -MP -MF"main.d" -MT"main.o" -o"main.o"  "../main.c"
subdir_rules.mk:7: recipe for target 'main.o' failed
../main.c: In function 'main':
../main.c:61:5: error: 'SSICR1' undeclared (first use in this function)
     SSICR1 = 0;
     ^
../main.c:61:5: note: each undeclared identifier is reported only once for each function it appears in
gmake: *** [main.o] Error 1
gmake: Target 'all' not remade because of errors.

**** Build Finished ****
